[package]
name = "repo-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
comfy-table = "7.2.2"
dialoguer = "0.12.0"
dotenvy = "0.15.7"
indicatif = "0.18.4"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
